--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -2,6 +2,9 @@
 	<ng-container [ngSwitch]="reportService.selectedReportType">
 		<ec-report-a2 *ngSwitchCase="ReportType.A2"></ec-report-a2>
 		<ec-report-a7 *ngSwitchCase="ReportType.A7"></ec-report-a7>
+		<button class="reset-button" mat-button (click)="resetInput()" obButton="tertiary">
+			{{ "reports.reset-input" | translate }}
+		</button>
 	</ng-container>
 	<div class="stepper-footer">
 		<section class="stepper-footer-content">
