--- a/src/app/report/report-parameter/report-a7/report-a7.component.html
+++ b/src/app/report/report-parameter/report-a7/report-a7.component.html
@@ -1,82 +1,9 @@
 <form [formGroup]="a7FormGroup">
 	<h3>{{ "reports.a7.title" | translate }}</h3>
-	<fieldset>
-		<legend>{{ "reports.a7.period-text" | translate }}</legend>
-		<div class="period-container">
-			<mat-form-field>
-				<input
-					matInput
-					[matDatepicker]="pickerFrom"
-					[placeholder]="translate.get('reports.a7.date-from') | async"
-					formControlName="from"
-				/>
-				<mat-datepicker #pickerFrom></mat-datepicker>
-				<mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
-					<mat-error *ngIf="a7FormGroup.get('from').hasError('invalidDate'); else startBeforeEndFrom">
-						{{ "i18n.validation.date" | translate }}
-					</mat-error>
-					<ng-template #startBeforeEndFrom>
-						<mat-error *ngIf="a7FormGroup.get('from').hasError('startDateAfterEndDate'); ">
-							{{ "reports.a7.startDateBeforeEndDate" | translate }}
-						</mat-error>
-					</ng-template>
-			</mat-form-field>
-			<mat-form-field>
-				<input
-					matInput
-					[matDatepicker]="pickerTo"
-					[placeholder]="translate.get('reports.a7.date-to') | async"
-					formControlName="to"
-				/>
-				<mat-datepicker #pickerTo></mat-datepicker>
-				<mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
-				<mat-error *ngIf="a7FormGroup.get('to').hasError('invalidDate')">
-					{{ "i18n.validation.date" | translate }}
-				</mat-error>
-			</mat-form-field>
-		</div>
-	</fieldset>
-
-	<fieldset>
-		<legend>{{ "reports.a7.selected-dataroom" | translate }}</legend>
-		<mat-form-field>
-			<mat-select formControlName="canton">
-				<mat-option *ngFor="let dataRoom of authorizedDataRooms$ | async"
-							[value]="dataRoom">{{ ("dataroom." + (dataRoom | lowercase)) | translate }}</mat-option>
-			</mat-select>
-			<mat-error *ngIf="a7FormGroup.get('canton').hasError('required')">
-				{{ "i18n.validation.required" | translate }}
-			</mat-error>
-
-		</mat-form-field>
-	</fieldset>
-
-	<fieldset [formArrayName]="'types'">
-		<legend>{{ "reports.a7.select-cert-types" | translate }}</legend>
-		<mat-checkbox
-			[checked]="isSelectAllChecked"
-			[indeterminate]="isSelectAllIndeterminate"
-			(change)="checkAllCertTypes($event.checked)">
-			{{'reports.a7.select-all-cert-types' | translate}}
-		</mat-checkbox>
-		<ul>
-			<li *ngFor="let certificateType of CERTIFICATE_TYPES; let i = index">
-				<div *ngIf="i === 0">
-					{{'reports.a7.eu-compatible-certs' | translate}}
-				</div>
-				<div *ngIf="i === 4">
-					{{'reports.a7.ch-certs' | translate}}
-				</div>
-				<mat-checkbox
-					[value]="certificateType"
-					[checked]="a7FormGroup.get('types').value.includes(certificateType)"
-					(change)="certTypeCheckboxChanged($event.checked, certificateType)">
-					{{('reports.a7.cert-type.' + (certificateType | lowercase)) | translate}}
-				</mat-checkbox>
-			</li>
-		</ul>
-		<mat-error *ngIf="a7FormGroup.get('types').touched && a7FormGroup.get('types').hasError('required')">
-			{{'reports.a7.oneCertTypeHasToBeSelected' | translate}}
-		</mat-error>
-	</fieldset>
+	<ec-date-from-to-fieldset
+		[dateFromFormControl]="dateFromFormControl"
+		[dateToFormControl]="dateToFormControl">
+	</ec-date-from-to-fieldset>
+	<ec-data-room-selection-fieldset [dataRoomFormControl]="cantonFormControl"></ec-data-room-selection-fieldset>
+	<ec-cert-type-selection-fieldset [certTypesFormArray]="certTypesFormArray"></ec-cert-type-selection-fieldset>
 </form>
