--- a/src/app/report/report-parameter/report-a4-a6/unit-search/unit-search.component.html
+++ b/src/app/report/report-parameter/report-a4-a6/unit-search/unit-search.component.html
@@ -4,10 +4,12 @@
 			<mat-form-field class="tree-search-input">
 				<mat-label>{{ "reports.a4a6.search" | translate }}</mat-label>
 				<input type="text" matInput
+					   (keydown.enter)="setHiddenBySearchValue(treeDataSource.data)"
 					   [(ngModel)]="organisationSearchValue"
 					   [ngModelOptions]="{standalone: true}"
 				/>
-				<button *ngIf="organisationSearchValue" matSuffix mat-icon-button (click)="clearOrganisationSearch()">
+				<button *ngIf="organisationSearchValue" type="button" matSuffix mat-icon-button
+						(click)="clearOrganisationSearch()">
 					<mat-icon
 						svgIcon="{{'cancel'}}">
 					</mat-icon>
@@ -53,7 +55,7 @@
 							<ng-container
 								*ngIf="getProfiles$(node) | async as profilesDataSource; else profilesLoading">
 								<div class="table-container">
-									<table mat-table [dataSource]="profilesDataSource">
+									<table class="ob-table ob-table-hover ob-table-sm" mat-table [dataSource]="profilesDataSource">
 										<ng-container matColumnDef="select">
 											<th mat-header-cell *matHeaderCellDef>
 												<mat-checkbox #checkAllCb
