--- a/src/app/report/report-parameter/report-a4-a6/unit-search/unit-search.component.html
+++ b/src/app/report/report-parameter/report-a4-a6/unit-search/unit-search.component.html
@@ -1,5 +1,6 @@
 <fieldset>
 	<ec-field-wrapper [isError]="userIdsFormArray.touched && userIdsFormArray.hasError('required')">
+		<p>{{'reports.a4a6.searchByUnitName' | translate}}</p>
 		<div class="tree-search-input-container">
 			<mat-form-field class="tree-search-input">
 				<mat-label>{{ "reports.a4a6.search" | translate }}</mat-label>
