--- a/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
+++ b/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
@@ -20,9 +20,15 @@
 					{{ "reports.dateFromTo.startDateBeforeEndDate" | translate }}
 				</mat-error>
 				<ng-template #dateFromTooSmall>
-					<mat-error *ngIf="dateFromFormControl.hasError('matDatepickerMin')">
+					<mat-error *ngIf="dateFromFormControl.hasError('matDatepickerMin'); else periodTooBig">
 						{{ "reports.dateFromTo.dateTooSmall" | translate }}
 					</mat-error>
+					<ng-template #periodTooBig>
+						<mat-error *ngIf="dateFromFormControl.hasError('maxPeriodDays')">
+							{{ "reports.dateFromTo.maxPeriodDays" | translate:{maxPeriodDays: dateFromFormControl.errors['maxPeriodDays']} }}
+						</mat-error>
+					</ng-template>
+
 				</ng-template>
 			</ng-template>
 		</mat-form-field>
