--- a/src/app/report/report-parameter/report-a4-a6/selected-profiles/selected-profiles.component.html
+++ b/src/app/report/report-parameter/report-a4-a6/selected-profiles/selected-profiles.component.html
@@ -17,7 +17,7 @@
 			</mat-chip>
 		</mat-chip-list>
 		<mat-error *ngIf="userIdsFormArray.hasError('maxlength')">
-			{{'reports.a4a6.tooManyUsers' | translate:userIdsFormArray.errors['maxlength'] }}
+			{{'reports.a4a6.tooManyUsers' | translate }}
 		</mat-error>
 	</ec-field-wrapper>
 </fieldset>
