--- a/src/app/report/select-report-type/select-report-type.component.html
+++ b/src/app/report/select-report-type/select-report-type.component.html
@@ -190,67 +190,67 @@
 					</div>
 				</div>
 			</ob-collapse>
-			<!--			<ob-collapse *ecHasAuthorizationForAny="[AuthFunction.REPORT_A8,AuthFunction.REPORT_A9]">-->
-			<!--				<span obCollapseHeader> {{'reports.statistic.header' | translate}} </span>-->
-			<!--				<div obCollapseMain>-->
-			<!--					<div class="radio-button-container">-->
-			<!--						<div>-->
-			<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A8">-->
-			<!--								<div class="button-container">-->
-			<!--									<mat-radio-button id="report-type-A8" [value]="ReportType.A8"-->
-			<!--													  [name]="ReportType.A8"-->
-			<!--													  class="radio-button">-->
-			<!--										{{ "reports.a8.title" | translate }}-->
-			<!--									</mat-radio-button>-->
-			<!--									<p>{{'reports.a8.description.short' | translate}}</p>-->
-			<!--								</div>-->
-			<!--								<div class="info-container">-->
-			<!--									<button-->
-			<!--										mat-icon-button-->
-			<!--										obButton="tertiary"-->
-			<!--										[obPopover]="popoverM"-->
-			<!--									>-->
-			<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
-			<!--									</button>-->
-			<!--									<ng-template #popoverM>-->
-			<!--										<div class="popover-content">-->
-			<!--											<p [innerHTML]="'reports.a8.description.long' | translate"></p>-->
-			<!--										</div>-->
-			<!--									</ng-template>-->
-			<!--								</div>-->
-			<!--							</div>-->
-			<!--							<div class="divider"></div>-->
-			<!--						</div>-->
-			<!--						<div>-->
-			<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A9">-->
-			<!--								<div class="button-container">-->
-			<!--									<mat-radio-button id="report-type-A9" [value]="ReportType.A9"-->
-			<!--													  [name]="ReportType.A9"-->
-			<!--													  class="radio-button">-->
-			<!--										{{ "reports.a9.title" | translate }}-->
-			<!--									</mat-radio-button>-->
-			<!--									<p>{{'reports.a9.description.short' | translate}}</p>-->
-			<!--								</div>-->
-			<!--								<div class="info-container">-->
-			<!--									<button-->
-			<!--										mat-icon-button-->
-			<!--										obButton="tertiary"-->
-			<!--										[obPopover]="popoverM"-->
-			<!--									>-->
-			<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
-			<!--									</button>-->
-			<!--									<ng-template #popoverM>-->
-			<!--										<div class="popover-content">-->
-			<!--											<p [innerHTML]="'reports.a9.description.long' | translate"></p>-->
-			<!--										</div>-->
-			<!--									</ng-template>-->
-			<!--								</div>-->
-			<!--							</div>-->
-			<!--							<div class="divider"></div>-->
-			<!--						</div>-->
-			<!--					</div>-->
-			<!--				</div>-->
-			<!--			</ob-collapse>-->
+			<ob-collapse *ecHasAuthorizationForAny="[AuthFunction.REPORT_A8,AuthFunction.REPORT_A9]">
+				<span obCollapseHeader> {{'reports.statistic.header' | translate}} </span>
+				<div obCollapseMain>
+					<div class="radio-button-container">
+						<div>
+							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A8">
+								<div class="button-container">
+									<mat-radio-button id="report-type-A8" [value]="ReportType.A8"
+													  [name]="ReportType.A8"
+													  class="radio-button">
+										{{ "reports.a8.title" | translate }}
+									</mat-radio-button>
+									<p>{{'reports.a8.description.short' | translate}}</p>
+								</div>
+								<div class="info-container">
+									<button
+										mat-icon-button
+										obButton="tertiary"
+										[obPopover]="popoverM"
+									>
+										<mat-icon svgIcon="help-circle"></mat-icon>
+									</button>
+									<ng-template #popoverM>
+										<div class="popover-content">
+											<p [innerHTML]="'reports.a8.description.long' | translate"></p>
+										</div>
+									</ng-template>
+								</div>
+							</div>
+							<div class="divider"></div>
+						</div>
+<!--						<div>-->
+<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A9">-->
+<!--								<div class="button-container">-->
+<!--									<mat-radio-button id="report-type-A9" [value]="ReportType.A9"-->
+<!--													  [name]="ReportType.A9"-->
+<!--													  class="radio-button">-->
+<!--										{{ "reports.a9.title" | translate }}-->
+<!--									</mat-radio-button>-->
+<!--									<p>{{'reports.a9.description.short' | translate}}</p>-->
+<!--								</div>-->
+<!--								<div class="info-container">-->
+<!--									<button-->
+<!--										mat-icon-button-->
+<!--										obButton="tertiary"-->
+<!--										[obPopover]="popoverM"-->
+<!--									>-->
+<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
+<!--									</button>-->
+<!--									<ng-template #popoverM>-->
+<!--										<div class="popover-content">-->
+<!--											<p [innerHTML]="'reports.a9.description.long' | translate"></p>-->
+<!--										</div>-->
+<!--									</ng-template>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--							<div class="divider"></div>-->
+<!--						</div>-->
+					</div>
+				</div>
+			</ob-collapse>
 		</div>
 		<div class="help-container">
 			<mat-card>
