--- a/src/app/report/report-parameter/report-a2/report-a2.component.html
+++ b/src/app/report/report-parameter/report-a2/report-a2.component.html
@@ -1,25 +1,13 @@
 <h3>{{ "reports.a2.title" | translate }}</h3>
-<p [innerHTML]="'reports.uvci.info' | translate"></p>
-<p>{{ "reports.uvci.format" | translate }}</p>
-<mat-form-field *ngIf="formControl" appearance="fill">
-	<mat-chip-list #chipList>
-		<mat-chip
-			*ngFor="let uvci of this.a2FormGroup.get('uvcis').value"
-			[ngClass]="{ error: errorUvcis.includes(uvci) }"
-			(removed)="remove(uvci)"
-		>
-			{{ uvci }}
-			<mat-icon class="" svgIcon="cancel" matChipRemove></mat-icon>
-		</mat-chip>
-		<input
-			[formControl]="formControl"
-			[matChipInputFor]="chipList"
-			[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-			(matChipInputTokenEnd)="add($event)"
-			(paste)="onPaste($event)"
-		/>
-	</mat-chip-list>
-	<mat-error *ngIf="formControl.hasError('tooManyUvcis')">{{ "reports.uvci.too-many" | translate }}</mat-error>
-	<mat-error *ngIf="formControl.hasError('format')">{{ "reports.uvci.format.error" | translate }}</mat-error>
-	<mat-error *ngIf="formControl.hasError('required')">{{ "i18n.validation.required" | translate }}</mat-error>
-</mat-form-field>
+<ec-chip-list-fieldset [chipDataFormControl]="uvcisFormControl" [formatValidator]="uvciValidator">
+	<p [innerHTML]="'reports.uvci.info' | translate"></p>
+	<p>{{ "reports.uvci.format" | translate }}</p>
+	<ng-container chipListFieldsetErrors>
+		<ng-container
+			*ngIf="uvcisFormControl.hasError('tooManyUvcis')">{{ "reports.uvci.too-many" | translate }}</ng-container>
+		<ng-container
+			*ngIf="uvcisFormControl.hasError('format')">{{ "reports.uvci.format.error" | translate }}</ng-container>
+		<ng-container
+			*ngIf="uvcisFormControl.hasError('required')">{{ "i18n.validation.required" | translate }}</ng-container>
+	</ng-container>
+</ec-chip-list-fieldset>
