--- a/src/app/report/select-report-type/select-report-type.component.html
+++ b/src/app/report/select-report-type/select-report-type.component.html
@@ -71,11 +71,8 @@
 				</div>
 			</ob-collapse>
 			<ob-collapse
-				*ecHasAuthorizationForAny="[AuthFunction.REPORT_A2, AuthFunction.REPORT_A4, AuthFunction.REPORT_A6,]">
-				<!-- 					AuthFunction.REPORT_A11,-->
-				<!-- 					AuthFunction.REPORT_A12,-->
-				<!-- 				]"-->
-				<!--			>-->
+				*ecHasAuthorizationForAny="[AuthFunction.REPORT_A2, AuthFunction.REPORT_A4, AuthFunction.REPORT_A6,AuthFunction.REPORT_A11,
+				 					AuthFunction.REPORT_A12,]">
 				<span obCollapseHeader> {{ "reports.detail.header" | translate }} </span>
 				<div obCollapseMain>
 					<div class="radio-button-container">
@@ -160,33 +157,33 @@
 						<!--							</div>-->
 						<!--							<div class="divider"></div>-->
 						<!--						</div>-->
-						<!--						<div>-->
-						<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A12">-->
-						<!--								<div class="button-container">-->
-						<!--									<mat-radio-button id="report-type-A12" [value]="ReportType.A12"-->
-						<!--													  [name]="ReportType.A12"-->
-						<!--													  class="radio-button">-->
-						<!--										{{ "reports.a12.title" | translate }}-->
-						<!--									</mat-radio-button>-->
-						<!--									<p>{{'reports.a12.description.short' | translate}}</p>-->
-						<!--								</div>-->
-						<!--								<div class="info-container">-->
-						<!--									<button-->
-						<!--										mat-icon-button-->
-						<!--										obButton="tertiary"-->
-						<!--										[obPopover]="popoverM"-->
-						<!--									>-->
-						<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
-						<!--									</button>-->
-						<!--									<ng-template #popoverM>-->
-						<!--										<div class="popover-content">-->
-						<!--											<p [innerHTML]="'reports.a12.description.long' | translate"></p>-->
-						<!--										</div>-->
-						<!--									</ng-template>-->
-						<!--								</div>-->
-						<!--							</div>-->
-						<!--							<div class="divider"></div>-->
-						<!--						</div>-->
+						<div>
+							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A12">
+								<div class="button-container">
+									<mat-radio-button id="report-type-A12" [value]="ReportType.A12"
+													  [name]="ReportType.A12"
+													  class="radio-button">
+										{{ "reports.a12.title" | translate }}
+									</mat-radio-button>
+									<p>{{'reports.a12.description.short' | translate}}</p>
+								</div>
+								<div class="info-container">
+									<button
+										mat-icon-button
+										obButton="tertiary"
+										[obPopover]="popoverM"
+									>
+										<mat-icon svgIcon="help-circle"></mat-icon>
+									</button>
+									<ng-template #popoverM>
+										<div class="popover-content">
+											<p [innerHTML]="'reports.a12.description.long' | translate"></p>
+										</div>
+									</ng-template>
+								</div>
+							</div>
+							<div class="divider"></div>
+						</div>
 					</div>
 				</div>
 			</ob-collapse>
@@ -221,33 +218,33 @@
 							</div>
 							<div class="divider"></div>
 						</div>
-<!--						<div>-->
-<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A9">-->
-<!--								<div class="button-container">-->
-<!--									<mat-radio-button id="report-type-A9" [value]="ReportType.A9"-->
-<!--													  [name]="ReportType.A9"-->
-<!--													  class="radio-button">-->
-<!--										{{ "reports.a9.title" | translate }}-->
-<!--									</mat-radio-button>-->
-<!--									<p>{{'reports.a9.description.short' | translate}}</p>-->
-<!--								</div>-->
-<!--								<div class="info-container">-->
-<!--									<button-->
-<!--										mat-icon-button-->
-<!--										obButton="tertiary"-->
-<!--										[obPopover]="popoverM"-->
-<!--									>-->
-<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
-<!--									</button>-->
-<!--									<ng-template #popoverM>-->
-<!--										<div class="popover-content">-->
-<!--											<p [innerHTML]="'reports.a9.description.long' | translate"></p>-->
-<!--										</div>-->
-<!--									</ng-template>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--							<div class="divider"></div>-->
-<!--						</div>-->
+						<!--						<div>-->
+						<!--							<div class="report-item" *ecHasAuthorizationFor="AuthFunction.REPORT_A9">-->
+						<!--								<div class="button-container">-->
+						<!--									<mat-radio-button id="report-type-A9" [value]="ReportType.A9"-->
+						<!--													  [name]="ReportType.A9"-->
+						<!--													  class="radio-button">-->
+						<!--										{{ "reports.a9.title" | translate }}-->
+						<!--									</mat-radio-button>-->
+						<!--									<p>{{'reports.a9.description.short' | translate}}</p>-->
+						<!--								</div>-->
+						<!--								<div class="info-container">-->
+						<!--									<button-->
+						<!--										mat-icon-button-->
+						<!--										obButton="tertiary"-->
+						<!--										[obPopover]="popoverM"-->
+						<!--									>-->
+						<!--										<mat-icon svgIcon="help-circle"></mat-icon>-->
+						<!--									</button>-->
+						<!--									<ng-template #popoverM>-->
+						<!--										<div class="popover-content">-->
+						<!--											<p [innerHTML]="'reports.a9.description.long' | translate"></p>-->
+						<!--										</div>-->
+						<!--									</ng-template>-->
+						<!--								</div>-->
+						<!--							</div>-->
+						<!--							<div class="divider"></div>-->
+						<!--						</div>-->
 					</div>
 				</div>
 			</ob-collapse>
