VACCINECER-2082 add revocation date

--- a/src/app/certificate-revoke/certificate-revoke.component.html
+++ b/src/app/certificate-revoke/certificate-revoke.component.html
@@ -33,6 +33,10 @@
 	</form>
 
 	<ob-alert *ngIf="revoked" type="success">{{
-		"certificateRevoke.success" | obTranslateParams: { uvci: uvciUsed }
-	}}</ob-alert>
+		"certificateRevoke.success" | obTranslateParams: {uvci: uvciUsed}
+		}}</ob-alert>
+
+	<ob-alert *ngIf="previouslyRevoked" type="warning">{{
+		"certificateRevoke.alreadyRevoked" | obTranslateParams: {date: revocationDate | date: "dd.MM.YYYY"}
+		}}</ob-alert>
 </div>
