format: clean code

--- a/src/app/create/summary/summary.component.html
+++ b/src/app/create/summary/summary.component.html
@@ -30,10 +30,10 @@
 <ng-container *ngIf="patient?.test">
 	<h5>
 		{{
-		(GenerationType.RECOVERY_RAT == certificateType
+			(GenerationType.RECOVERY_RAT == certificateType
 				? "certificateCreate.step-one.enum.recovery-rat"
 				: "certificateCreate.form.group.test"
-		) | translate
+			) | translate
 		}}
 	</h5>
 	<dl>
@@ -48,11 +48,11 @@
 		<dt>{{ "certificateCreate.form.label.test.sampleDateTime" | translate }}</dt>
 		<dd id="sampleDate">
 			{{
-			(GenerationType.RECOVERY_RAT == certificateType
+				GenerationType.RECOVERY_RAT == certificateType
 					? (patient?.test.sampleDate | date: "dd.MM.YYYY")
 					: (patient?.test.sampleDate | date: "dd.MM.YYYY HH:mm")
-			)
-			}}</dd>
+			}}
+		</dd>
 		<dt *ngIf="GenerationType.RECOVERY_RAT != certificateType">
 			{{ "certificateCreate.form.label.test.center" | translate }}
 		</dt>
