--- a/src/app/report/report-parameter/report-a4-a6/selected-profiles/selected-profiles.component.html
+++ b/src/app/report/report-parameter/report-a4-a6/selected-profiles/selected-profiles.component.html
@@ -1,23 +1,25 @@
 <fieldset>
-	<legend>{{"reports.a4a6.selectedUser" | translate}}</legend>
+	<legend>{{ "reports.a4a6.selectedUser" | translate }}</legend>
 	<ec-field-wrapper [isError]="userIdsFormArray.hasError('maxlength')">
 		<div *ngIf="!Object.values(selectedProfilesService.changes$ | async).length">
-			{{"reports.a4a6.noUserSelected" | translate}}
+			{{ "reports.a4a6.noUserSelected" | translate }}
 		</div>
 		<mat-chip-list [selectable]="true">
 			<mat-chip
-				*ngFor="let profile of Object.values(selectedProfilesService.changes$ | async); trackBy:trackBy"
-				(click)="selectedChip === profile ? selectedChip = null : selectedChip = profile"
+				*ngFor="let profile of Object.values(selectedProfilesService.changes$ | async); trackBy: trackBy"
+				(click)="selectedChip === profile ? (selectedChip = null) : (selectedChip = profile)"
 				[selected]="selectedChip === profile"
-				(removed)="remove(profile)">
-				{{profile.firstname}} {{profile.name}}
-				<ng-container *ngIf="selectedChip === profile">| {{profile.email}}
-					| {{profile.userExtId}}</ng-container>
+				(removed)="remove(profile)"
+			>
+				{{ profile.firstname }} {{ profile.name }}
+				<ng-container *ngIf="selectedChip === profile"
+					>| {{ profile.email }} | {{ profile.userExtId }}</ng-container
+				>
 				<mat-icon svgIcon="cancel" matChipRemove></mat-icon>
 			</mat-chip>
 		</mat-chip-list>
 		<mat-error *ngIf="userIdsFormArray.hasError('maxlength')">
-			{{'reports.a4a6.tooManyUsers' | translate:userIdsFormArray.errors['maxlength'] }}
+			{{ "reports.a4a6.tooManyUsers" | translate: userIdsFormArray.errors["maxlength"] }}
 		</mat-error>
 	</ec-field-wrapper>
 </fieldset>
