--- a/src/app/report/report-parameter/report-a8/report-a8.component.html
+++ b/src/app/report/report-parameter/report-a8/report-a8.component.html
@@ -1,8 +1,6 @@
 <form [formGroup]="a8FormGroup" #ngForm="ngForm">
 	<h3>{{ "reports.a8.title" | translate }}</h3>
-	<ec-date-from-to-fieldset
-		[dateFromFormControl]="dateFromFormControl"
-		[dateToFormControl]="dateToFormControl">
+	<ec-date-from-to-fieldset [dateFromFormControl]="dateFromFormControl" [dateToFormControl]="dateToFormControl">
 	</ec-date-from-to-fieldset>
 	<ec-cert-type-selection-fieldset [certTypesFormArray]="certTypesFormArray"></ec-cert-type-selection-fieldset>
 </form>
