--- a/src/app/report/report-parameter/_shared/cert-type-selection-fieldset/cert-type-selection-fieldset.component.html
+++ b/src/app/report/report-parameter/_shared/cert-type-selection-fieldset/cert-type-selection-fieldset.component.html
@@ -5,27 +5,29 @@
 			<mat-checkbox
 				[checked]="isSelectAllChecked"
 				[indeterminate]="isSelectAllIndeterminate"
-				(change)="checkAllCertTypes($event.checked)">
-				{{'reports.certTypesSelection.select-all' | translate}}
+				(change)="checkAllCertTypes($event.checked)"
+			>
+				{{ "reports.certTypesSelection.select-all" | translate }}
 			</mat-checkbox>
 			<ul>
 				<li *ngFor="let certificateType of CERTIFICATE_TYPES; let i = index">
 					<div *ngIf="i === 0">
-						{{'reports.certTypesSelection.eu-compatible-certs' | translate}}
+						{{ "reports.certTypesSelection.eu-compatible-certs" | translate }}
 					</div>
 					<div *ngIf="i === 4">
-						{{'reports.certTypesSelection.ch-certs' | translate}}
+						{{ "reports.certTypesSelection.ch-certs" | translate }}
 					</div>
 					<mat-checkbox
 						[value]="certificateType"
 						[checked]="certTypesFormArray.value.includes(certificateType)"
-						(change)="certTypeCheckboxChanged($event.checked, certificateType)">
-						{{('reports.certTypesSelection.cert-type.' + (certificateType | lowercase)) | translate}}
+						(change)="certTypeCheckboxChanged($event.checked, certificateType)"
+					>
+						{{ "reports.certTypesSelection.cert-type." + (certificateType | lowercase) | translate }}
 					</mat-checkbox>
 				</li>
 			</ul>
 			<mat-error>
-				{{'reports.certTypesSelection.oneCertTypeHasToBeSelected' | translate}}
+				{{ "reports.certTypesSelection.oneCertTypeHasToBeSelected" | translate }}
 			</mat-error>
 		</ec-field-wrapper>
 	</fieldset>
