--- a/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
+++ b/src/app/report/report-parameter/_shared/date-from-to-fieldset/date-from-to-fieldset.component.html
@@ -25,10 +25,12 @@
 					</mat-error>
 					<ng-template #periodTooBig>
 						<mat-error *ngIf="dateFromFormControl.hasError('maxPeriodDays')">
-							{{ "reports.dateFromTo.maxPeriodDays" | translate:{maxPeriodDays: dateFromFormControl.errors['maxPeriodDays']} }}
+							{{
+								"reports.dateFromTo.maxPeriodDays"
+									| translate: { maxPeriodDays: dateFromFormControl.errors["maxPeriodDays"] }
+							}}
 						</mat-error>
 					</ng-template>
-
 				</ng-template>
 			</ng-template>
 		</mat-form-field>
